Port Bug #169271 --> when displaying an imap message with parts, and falling back to fetching the whole msg because the parts are inline, store the msg for offline use if we would have stored it for offline use but for the parts